# ra-memory-research

./: .gitignore  README.md  main.py  pyproject.toml  requeriments.txt  requirements.txt
docs/: architecture.md
src/core/: application.py
src/ramr/: __init__.py
src/ramr/core/: __init__.py  application.py  constants.py  settings.py
src/ramr/domain/: __init__.py  exceptions.py  memory.py  memory_provider.py
src/ramr/infrastructure/: __init__.py
src/ramr/infrastructure/database/: __init__.py  project_database.py
src/ramr/infrastructure/filesystem/: __init__.py  project_repository.py  recent_projects.py
src/ramr/infrastructure/logging/: configuration.py
src/ramr/infrastructure/memory/: ports.py  (+8 more)
src/ramr/models/: __init__.py  project.py
src/ramr/services/: __init__.py  emulator_service.py  project_service.py
src/ramr/ui/: __init__.py  main_window.py  menu_bar.py  status_bar.py  workspace.py
src/ramr/utils/: __init__.py
src/ui/: main_window.py  menu_bar.py  status_bar.py  workspace.py
src/ui/dock_widgets/: inspector_dock.py  project_dock.py
tests/ui/: conftest.py  test_connect_emulator_dialog.py  test_main_window.py  test_new_project_dialog.py
tests/unit/: test_buffer_reader.py  test_emulator_service.py  test_fake_provider.py  test_logging_configuration.py  test_memory_domain.py  test_memory_provider_registry.py  test_process_locator.py  test_process_provider.py  test_process_reader.py  test_project_database.py  test_project_model.py  test_project_repository.py  test_project_service.py  test_recent_projects.py  test_settings.py  test_version.py
(+5 files in other folders)
